--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,30 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Intractions</ion-card-title>
+        <ion-card-title>Calling</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="3">
+              <ion-icon  name="call" class="icon" (click)="openDialPad('+1234567890')"></ion-icon>
+              <p class="icon-name">Cold Call</p>
+            </ion-col>
+            <ion-col size="3">
+              <ion-icon  name="star" class="icon" (click)="openDialPad('+1234567890')"></ion-icon>
+              <p class="icon-name">Cold Meeting</p>
+            </ion-col>
+            <ion-col size="3" *ngFor="let call of calling">
+              <ion-icon  routerDirection="root" [routerLink]="[call.url]" lines="none" detail="false" routerLinkActive="selected" [name]="call.name" class="icon"></ion-icon>
+              <p class="icon-name">{{call.label}}</p>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
+    </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Interaction</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-grid>
@@ -41,29 +64,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
-  <ion-card-header>
-      <ion-card-title>Calling</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-grid>
-        <ion-row>
-          <ion-col size="3">
-            <ion-icon  name="call" class="icon" (click)="openDialPad('+1234567890')"></ion-icon>
-            <p class="icon-name">Cold Call</p>
-          </ion-col>
-          <ion-col size="3">
-            <ion-icon  name="star" class="icon" (click)="openDialPad('+1234567890')"></ion-icon>
-            <p class="icon-name">Cold Meeting</p>
-          </ion-col>
-          <ion-col size="3" *ngFor="let call of calling">
-            <ion-icon  routerDirection="root" [routerLink]="[call.url]" lines="none" detail="false" routerLinkActive="selected" [name]="call.name" class="icon"></ion-icon>
-            <p class="icon-name">{{call.label}}</p>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>
+  
 
   <ion-card>
     <ion-card-header>
