--- a/src/app/calling/cold-call/cold-call.page.scss
+++ b/src/app/calling/cold-call/cold-call.page.scss
@@ -3,3 +3,14 @@
    color: white;
     
 }
+.shadow-all {
+   box-shadow: rgba(54, 138, 192, 0.3) 0 0 3px 3px;
+ }
+ 
+ .cardheader {
+   font-weight: bold;
+    text-decoration: underline;
+ }
+ .cardheaderalignment {
+   justify-content: center; 
+ }
