added global styles

--- a/src/global.scss
+++ b/src/global.scss
@@ -43,3 +43,7 @@
 .sub-content-css{
     font-size: 12px;
 }
+.errorClass {
+    padding-left: 15px;background: var(--ion-color-danger);color: white;display: block;font-size: small;padding-top: 5px;
+    padding-bottom: 5px;
+  }
