--- a/src/app/calling/cold-call/cold-call.page.html
+++ b/src/app/calling/cold-call/cold-call.page.html
@@ -15,27 +15,33 @@
   </ion-header>
 </ion-content> -->
 <ion-content>
-  <ion-card class="shadow-all">   
+ 
+    <!-- <form name="f" [formGroup]="coldcallForm" class="form">   -->
+  <ion-card class="shadow-all">
       <ion-row>
         <ion-col size="12" class="content-css">
-          Name
-        </ion-col>       
-      </ion-row>
-      <ion-row>
-        <ion-col size="12" class="content-css">
-          Satish
+          <ion-list>
+            <ion-item >
+              <ion-input type="text" label="Name" labelPlacement="floating"></ion-input>
+              </ion-item>
+              <!-- <ion-text  class="errorClass" *ngIf="name?.hasError('required') && name?.touched">
+                <span>Name is required</span> 
+              </ion-text>	 -->
+              </ion-list>
         </ion-col>       
       </ion-row>      
       </ion-card>
-      <ion-card class="shadow-all">   
+      <ion-card class="shadow-all">          
         <ion-row>
           <ion-col size="12" class="content-css">
-            Email
-          </ion-col>       
-        </ion-row>
-        <ion-row>
-          <ion-col size="12" class="content-css">
-            dfhskjfhgmail.com
+            <ion-list>
+            <ion-item >
+              <ion-input type="email"  label="Email" labelPlacement="floating"></ion-input>
+              </ion-item>
+              <!-- <ion-text  class="errorClass" *ngIf="email?.hasError('required') && email?.touched">
+                <span>Enter Valid Email</span> 
+              </ion-text>		 -->
+              </ion-list>
           </ion-col>       
         </ion-row>      
         </ion-card>
@@ -133,13 +139,15 @@
             <ion-card class="shadow-all">                
               <ion-list>
                 <ion-item >
-                  <ion-textarea labelPlacement="floating">
+                  <ion-textarea  labelPlacement="floating">
                     <div slot="label">Comments</div>
                   </ion-textarea>
                   </ion-item>
                   </ion-list>
               </ion-card>
             <ion-row style="justify-content: center;">
-              <ion-button  color="success">Submit</ion-button>
+              <ion-button (click)="onSubmit()" color="success">Submit</ion-button>
             </ion-row>
+          <!-- </form> -->
 </ion-content>
+<!-- formControlName="comments" -->
