--- a/src/app/sidemenu/share-bisiness-card/share-bisiness-card.page.html
+++ b/src/app/sidemenu/share-bisiness-card/share-bisiness-card.page.html
@@ -9,14 +9,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>shareBisinessCard</ion-title>
+    <ion-title>share Business Card</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">shareBisinessCard</ion-title>
+      <ion-title size="large">share Business Card</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
