--- a/src/app/calling/cold-call/cold-call.page.html
+++ b/src/app/calling/cold-call/cold-call.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button  defaultHref="/home"></ion-back-button>
+      <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Cold Call</ion-title>
   </ion-toolbar>
@@ -15,139 +15,159 @@
   </ion-header>
 </ion-content> -->
 <ion-content>
- 
-    <!-- <form name="f" [formGroup]="coldcallForm" class="form">   -->
-  <ion-card class="shadow-all">
+
+  <form name="f" [formGroup]="coldcallForm" class="form">
+    <ion-card class="shadow-all">
       <ion-row>
         <ion-col size="12" class="content-css">
           <ion-list>
-            <ion-item >
-              <ion-input type="text" label="Name" labelPlacement="floating"></ion-input>
-              </ion-item>
-              <!-- <ion-text  class="errorClass" *ngIf="name?.hasError('required') && name?.touched">
-                <span>Name is required</span> 
-              </ion-text>	 -->
-              </ion-list>
-        </ion-col>       
-      </ion-row>      
-      </ion-card>
-      <ion-card class="shadow-all">          
-        <ion-row>
-          <ion-col size="12" class="content-css">
-            <ion-list>
-            <ion-item >
-              <ion-input type="email"  label="Email" labelPlacement="floating"></ion-input>
-              </ion-item>
-              <!-- <ion-text  class="errorClass" *ngIf="email?.hasError('required') && email?.touched">
-                <span>Enter Valid Email</span> 
-              </ion-text>		 -->
-              </ion-list>
-          </ion-col>       
-        </ion-row>      
-        </ion-card>
-        <ion-card class="shadow-all">   
-          <ion-row class="cardheaderalignment"><h6>Client</h6> </ion-row>  
-          <ion-row>
-            <ion-button fill="outline" (click)="onclientbuttonclick(1)" [ngClass]="selectedClientOption == '1' ? 'highlite' : ''">Intersting</ion-button>            
-            <ion-button  fill="outline" (click)="onclientbuttonclick(2)"[ngClass]="selectedClientOption == '2' ? 'highlite' : ''">Not Looking Right Now</ion-button>
-          </ion-row>
-          <ng-container *ngIf="selectedClientOption == '1'">
+            <ion-item>
+              <ion-input type="text" formControlName="name" label="Name" labelPlacement="floating"></ion-input>
+            </ion-item>
+            <ion-text class="errorClass" *ngIf="name?.hasError('required') && name?.touched">
+              <span>Name is required</span>
+            </ion-text>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-row>
+        <ion-col size="12" class="content-css">
+          <ion-list>
+            <ion-item>
+              <ion-input type="email" formControlName="email" label="Email" labelPlacement="floating"></ion-input>
+            </ion-item>
+            <ion-text class="errorClass" *ngIf="email?.hasError('required') && email?.touched">
+              <span>Enter Valid Email</span>
+            </ion-text>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-row class="cardheaderalignment">
+        <h6>Client Intersted</h6>
+      </ion-row>
+      <ion-radio-group formControlName="clientinterest" [compareWith]="noninterestedcompareWith"
+        (ionChange)="notInteresthandleChange($event)">
+        <ion-item *ngFor="let options of yesOrnoOptions; trackBy: notInteresttrackItems">
+          <ion-radio [value]="options">{{ options }}</ion-radio>
+        </ion-item>
+      </ion-radio-group>
+      <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'Yes'">
+        <ion-card class="shadow-all">
           <ion-row>
             <ion-col size="4" class="content-css" style="margin: auto;">
-              <ion-checkbox labelPlacement="end">Property Lead</ion-checkbox> 
+              <ion-checkbox formControlName="propertyLead" labelPlacement="end">Property Lead</ion-checkbox>
             </ion-col>
-            <ion-col size="8" class="content-css" style="margin: auto;">
-            <ion-item >
-              <ion-select label="Select" label-placement="floating">
-                <ion-select-option value="INR">Flat</ion-select-option>
-                <ion-select-option value="USD">Open Space</ion-select-option>
-              </ion-select>
-              </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size="4" class="content-css" style="margin: auto;">
-                <ion-checkbox labelPlacement="end">RSVP</ion-checkbox> 
-              </ion-col>
-              <ion-col size="8" class="content-css" style="margin: auto;">
-                <ion-item>
-                <ion-select label="Select" label-placement="floating">
+            <ion-col size="8" class="content-css" style="margin: auto;" >
+              <ion-item *ngIf="coldcallForm.controls.propertyLead.value">
+                <ion-select formControlName="propertyLeadOptions" 
+                  label="Select" label-placement="floating">
                   <ion-select-option value="INR">Flat</ion-select-option>
                   <ion-select-option value="USD">Open Space</ion-select-option>
                 </ion-select>
               </ion-item>
-                </ion-col>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4" class="content-css" style="margin: auto;">
+              <ion-checkbox formControlName="rsvp" labelPlacement="end">RSVP</ion-checkbox>
+            </ion-col>
+            <ion-col size="8" class="content-css" style="margin: auto;"  >
+              <ion-item *ngIf="coldcallForm.controls.rsvp.value">
+                <ion-select formControlName="rsvpOptions"  label="Select"
+                  label-placement="floating">
+                  <ion-select-option value="INR">Flat</ion-select-option>
+                  <ion-select-option value="USD">Open Space</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
           </ion-row>
           <ion-row>
             <ion-col size="4" class="content-css">
-              <ion-checkbox labelPlacement="end">PL CUM RSVP</ion-checkbox> 
-            </ion-col>           
-        </ion-row>
-      </ng-container>      
-      <ng-container *ngIf="selectedClientOption == '2'">
-        <ion-row>          
-            <ng-container *ngFor="let items of notLookingOptions">
-              <ion-col size="6" class="content-css">
-              <ion-checkbox labelPlacement="end">{{items}}</ion-checkbox> 
+              <ion-checkbox formControlName="plcumrsvp" labelPlacement="end">PL CUM RSVP</ion-checkbox>
             </ion-col>
-            </ng-container>  
-          </ion-row>        
+          </ion-row>
+        </ion-card>
       </ng-container>
-          </ion-card>
-          <ng-container *ngIf="selectedClientOption == '1'">
-          <ion-card class="shadow-all">   
-            <ion-row class="cardheaderalignment"><h6>Interested Projects</h6> </ion-row>
-            <ion-row>
-              <ion-chip color="primary" *ngFor="let val of addedProjects">               
-                <ion-label>{{val}}</ion-label>
-                <ion-icon name="close" (click)="removeproject(val)"></ion-icon>
-                </ion-chip>                          
-            </ion-row>
-            <ion-row>
-              <ion-list>
-              <ion-item >
-                <ion-input label="Add more Projects" [(ngModel)]="enterProject" labelPlacement="floating"></ion-input>
-                <ion-button [disabled]="enterProject == ''" (click)="addProject()">Add</ion-button>
-                </ion-item>
-                </ion-list>
-            </ion-row>
-            </ion-card>
-            <ion-card class="shadow-all">   
-              <ion-row class="cardheaderalignment"> <h6>Client</h6> </ion-row>               
-                <ion-radio-group [compareWith]="compareWith" (ionChange)="handleChange($event)">               
-                  <ion-item *ngFor="let food of clientTyPeOptions; trackBy: trackItems">                    
-                    <ion-radio [value]="food" >{{ food.name }}</ion-radio>
-                   </ion-item>                  
-                </ion-radio-group>            
-              </ion-card>
-              <ion-card class="shadow-all">   
-                <ion-row class="cardheaderalignment"><h6>Plan to do</h6> </ion-row>               
-                  <ion-radio-group [compareWith]="plantodocompare" (ionChange)="plantodohandleChange($event)">
-                    <ion-item *ngFor="let planitems of plantoDotypes; trackBy: plantodoitemstracking">
-                      <ion-radio [value]="planitems">{{ planitems.name }}</ion-radio>
-                    </ion-item>
-                  </ion-radio-group>            
-                </ion-card>
-          </ng-container>
-          <ion-card class="shadow-all">   
-            <ion-row class="cardheaderalignment"><h6>Cross Segment Leads</h6> </ion-row>  
-            <ion-row style="justify-content: end;">
-              <ion-button fill="outline" (click)="onCrossSegmentbuttonclick(1)" [ngClass]="selectedCrossSegmentOption == '1' ? 'highlite' : ''">YES</ion-button>            
-              <ion-button  fill="outline" (click)="onCrossSegmentbuttonclick(2)"[ngClass]="selectedCrossSegmentOption == '2' ? 'highlite' : ''">NO</ion-button>
-            </ion-row>
-            </ion-card>
-            <ion-card class="shadow-all">                
-              <ion-list>
-                <ion-item >
-                  <ion-textarea  labelPlacement="floating">
-                    <div slot="label">Comments</div>
-                  </ion-textarea>
-                  </ion-item>
-                  </ion-list>
-              </ion-card>
-            <ion-row style="justify-content: center;">
-              <ion-button (click)="onSubmit()" color="success">Submit</ion-button>
-            </ion-row>
-          <!-- </form> -->
+      <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'No'">
+        <ion-card class="shadow-all">
+          <ion-radio-group formControlName="nointerestedVal" [compareWith]="noninterestedcompareWith"
+            (ionChange)="notInteresthandleChange($event)">
+            <ion-item *ngFor="let nonint of notLookingOptions; trackBy: notInteresttrackItems">
+              <ion-radio [value]="nonint">{{ nonint }}</ion-radio>
+            </ion-item>
+          </ion-radio-group>
+        </ion-card>
+      </ng-container>
+    </ion-card>
+    <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'Yes'">
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Interested Projects</h6>
+        </ion-row>
+        <ion-row>
+          <ion-chip color="primary" *ngFor="let val of addedProjects">
+            <ion-label>{{val}}</ion-label>
+            <ion-icon name="close" (click)="removeproject(val)"></ion-icon>
+          </ion-chip>
+        </ion-row>
+        <ion-row>
+          <ion-list>
+            <ion-item>
+              <ion-input label="Add more Projects" formControlName="enterProject" labelPlacement="floating"></ion-input>
+              <ion-button [disabled]="coldcallForm.controls.enterProject.value === ''"
+                (click)="addProject()">Add</ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-row>
+      </ion-card>
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Client</h6>
+        </ion-row>
+        <ion-radio-group formControlName="clienttype" [compareWith]="compareWith" (ionChange)="handleChange($event)">
+          <ion-item *ngFor="let food of clientTyPeOptions; trackBy: trackItems">
+            <ion-radio [value]="food">{{ food.name }}</ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-card>
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Plan to do</h6>
+        </ion-row>
+        <ion-radio-group formControlName="planitemstype" [compareWith]="plantodocompare"
+          (ionChange)="plantodohandleChange($event)">
+          <ion-item *ngFor="let planitems of plantoDotypes; trackBy: plantodoitemstracking">
+            <ion-radio [value]="planitems">{{ planitems.name }}</ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-card>
+    </ng-container>
+    <ion-card class="shadow-all">
+      <ion-row class="cardheaderalignment">
+        <h6>Cross Segment Leads</h6>
+      </ion-row>
+      <ion-radio-group formControlName="crosssegmentleads" [compareWith]="noninterestedcompareWith"
+        (ionChange)="notInteresthandleChange($event)">
+        <ion-item *ngFor="let options of yesOrnoOptions; trackBy: notInteresttrackItems">
+          <ion-radio [value]="options">{{ options }}</ion-radio>
+        </ion-item>
+      </ion-radio-group>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-list>
+        <ion-item>
+          <ion-textarea formControlName="comments" labelPlacement="floating">
+            <div slot="label">Comments</div>
+          </ion-textarea>
+        </ion-item>
+      </ion-list>
+    </ion-card>
+    <ion-row style="justify-content: center;">
+      <ion-button (click)="onSubmit()" color="success">Submit</ion-button>
+    </ion-row>
+  </form>
 </ion-content>
-<!-- formControlName="comments" -->
