--- a/src/app/calling/cold-call/cold-call.page.html
+++ b/src/app/calling/cold-call/cold-call.page.html
@@ -7,3 +7,192 @@
   </ion-toolbar>
 </ion-header>
 
+<!-- <ion-content>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title size="large">coldCall</ion-title>
+    </ion-toolbar>
+  </ion-header>
+</ion-content> -->
+<ion-content>
+
+  <form name="f" [formGroup]="coldcallForm" class="form">
+    <ion-card class="shadow-all">
+      <ion-row>
+        <ion-col size="12" class="content-css">
+          <ion-list>
+            <ion-item>
+              <ion-input type="text" formControlName="name" label="Name" labelPlacement="floating"></ion-input>
+            </ion-item>
+            <ion-text class="errorClass" *ngIf="name?.hasError('required') && name?.touched">
+              <span>Name is required</span>
+            </ion-text>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-row>
+        <ion-col size="12" class="content-css">
+          <ion-list>
+            <ion-item>
+              <ion-input type="email" formControlName="email" label="Email" labelPlacement="floating"></ion-input>
+            </ion-item>
+            <ion-text class="errorClass" *ngIf="email?.hasError('required') && email?.touched">
+              <span>Enter Valid Email</span>
+            </ion-text>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-row class="cardheaderalignment">
+        <h6>Client Intersted</h6>
+      </ion-row>
+      <ion-radio-group formControlName="clientinterest" [compareWith]="noninterestedcompareWith"
+        (ionChange)="notInteresthandleChange($event)">
+        <ion-row>
+          <ion-col size="6" *ngFor="let options of yesOrnoOptions; trackBy: notInteresttrackItems">
+            <ion-item>
+              <ion-radio [value]="options" justify="start" labelPlacement="end">{{ options }}</ion-radio>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-radio-group>
+      <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'Yes'">
+        <ion-card class="shadow-all">
+          <ion-row>
+            <ion-col size="4" class="content-css" style="margin: auto;">
+              <ion-checkbox formControlName="propertyLead" labelPlacement="end">Property Lead</ion-checkbox>
+            </ion-col>
+            <ion-col size="8" class="content-css" style="margin: auto;">
+              <ion-item *ngIf="coldcallForm.controls.propertyLead.value">
+                <ion-select formControlName="propertyLeadOptions" label="Select" label-placement="floating">
+                  <ion-select-option value="INR">Flat</ion-select-option>
+                  <ion-select-option value="USD">Open Space</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4" class="content-css" style="margin: auto;">
+              <ion-checkbox formControlName="rsvp" labelPlacement="end">RSVP</ion-checkbox>
+            </ion-col>
+            <ion-col size="8" class="content-css" style="margin: auto;">
+              <ion-item *ngIf="coldcallForm.controls.rsvp.value">
+                <ion-select formControlName="rsvpOptions" label="Select" label-placement="floating">
+                  <ion-select-option value="INR">Flat</ion-select-option>
+                  <ion-select-option value="USD">Open Space</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4" class="content-css">
+              <ion-checkbox formControlName="plcumrsvp" labelPlacement="end">PL CUM RSVP</ion-checkbox>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ng-container>
+      <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'No'">
+        <ion-card class="shadow-all">
+          <ion-radio-group formControlName="nointerestedVal" [compareWith]="noninterestedcompareWith"
+            (ionChange)="notInteresthandleChange($event)">
+            <ion-row>
+              <ion-col size="6" *ngFor="let nonint of notLookingOptions; trackBy: notInteresttrackItems">
+                <ion-item>
+                  <ion-radio [value]="nonint" justify="start" labelPlacement="end">{{ nonint }}</ion-radio>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-radio-group>
+
+          <!-- <ion-radio-group formControlName="nointerestedVal" [compareWith]="noninterestedcompareWith"
+            (ionChange)="notInteresthandleChange($event)">
+            <ion-item *ngFor="let nonint of notLookingOptions; trackBy: notInteresttrackItems">
+              <ion-radio [value]="nonint">{{ nonint }}</ion-radio>
+            </ion-item>
+          </ion-radio-group> -->
+        </ion-card>
+      </ng-container>
+    </ion-card>
+    <ng-container *ngIf="coldcallForm.controls.clientinterest.value === 'Yes'">
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Interested Projects</h6>
+        </ion-row>
+        <ion-row>
+          <ion-chip color="primary" *ngFor="let val of addedProjects">
+            <ion-label>{{val}}</ion-label>
+            <ion-icon name="close" (click)="removeproject(val)"></ion-icon>
+          </ion-chip>
+        </ion-row>
+        <ion-row>
+          <ion-list>
+            <ion-item>
+              <ion-input label="Add more Projects" formControlName="enterProject" labelPlacement="floating"></ion-input>
+              <ion-button [disabled]="coldcallForm.controls.enterProject.value === ''"
+                (click)="addProject()">Add</ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-row>
+      </ion-card>
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Client</h6>
+        </ion-row>
+        <ion-radio-group formControlName="clienttype" [compareWith]="compareWith" (ionChange)="handleChange($event)">
+          <ion-row>
+            <ion-col size="6" *ngFor="let food of clientTyPeOptions; trackBy: trackItems">
+              <ion-item>
+                <ion-radio [value]="food" justify="start" labelPlacement="end">{{ food.name }}</ion-radio>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-radio-group>
+      </ion-card>
+      <ion-card class="shadow-all">
+        <ion-row class="cardheaderalignment">
+          <h6>Plan to do</h6>
+        </ion-row>
+        <ion-radio-group formControlName="planitemstype" [compareWith]="plantodocompare"
+          (ionChange)="plantodohandleChange($event)">
+          <ion-row>
+            <ion-col size="6" *ngFor="let planitems of plantoDotypes; trackBy: plantodoitemstracking">
+              <ion-item>
+                <ion-radio [value]="planitems" justify="start" labelPlacement="end">{{ planitems.name }}</ion-radio>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-radio-group>
+      </ion-card>
+    </ng-container>
+    <ion-card class="shadow-all">
+      <ion-row class="cardheaderalignment">
+        <h6>Cross Segment Leads</h6>
+      </ion-row>
+      <ion-radio-group formControlName="crosssegmentleads" [compareWith]="noninterestedcompareWith"
+        (ionChange)="notInteresthandleChange($event)">
+        <ion-row>
+          <ion-col size="6" *ngFor="let options of yesOrnoOptions; trackBy: notInteresttrackItems">
+            <ion-item>
+              <ion-radio [value]="options" justify="start" labelPlacement="end">{{ options }}</ion-radio>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-radio-group>
+    </ion-card>
+    <ion-card class="shadow-all">
+      <ion-list>
+        <ion-item>
+          <ion-textarea formControlName="comments" labelPlacement="floating">
+            <div slot="label">Comments</div>
+          </ion-textarea>
+        </ion-item>
+      </ion-list>
+    </ion-card>
+    <ion-row style="justify-content: center;">
+      <ion-button (click)="onSubmit()" color="success">Submit</ion-button>
+    </ion-row>
+  </form>
+</ion-content>
